--- a/css/styles.css
+++ b/css/styles.css
@@ -293,3 +293,24 @@ body {
   height: 112px;
   background: #e8e8e8;
 }
+
+.central-icon {
+  font-family: "Play", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  line-height: 1.4;
+  color: #111;
+}
+
+.central-icon-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 8px;
+  border: 2px solid #000;
+  padding: 17px 24px;
+  width: 153px;
+  height: 62px;
+}
